# mathanim

./: .gitignore  Dockerfile  README.md  debug_router.py  pyproject.toml  test_backend.py  test_numpy.py
app/agents/: architect.py  critic.py  developer.py  graph.py  mathematician.py  state.py
app/api/: main.py  models.py
app/rag/: chunker.py  memory.py  scraper.py  store.py
app/services/: curriculum_loader.py  fallback_generator.py  hybrid_router.py  validator.py
app/static/: index.html  script.js  style.css  style.css_append_temp
app/templates/: calculus_template.py  equation_template.py  geometry_template.py  graphing_template.py  number_line_template.py  sequence_template.py  unit_circle_template.py
curriculum/: topics.yaml
manim_docs/: chunks.json  manim_docs.json
scripts/: benchmark_graded.py
tests/: test_integration.py
workers/: celery_app.py  tasks.py
