[tool.poetry]
name = "mathanim"
version = "0.1.0"
description = "Autonomous Visualisation Engine transforming math problems into Manim videos."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
langchain = "^0.1.0"
langgraph = "^0.0.10"
openai = "^1.10.0"
anthropic = "^0.7.0"
chromadb = "^0.4.22"
celery = "^5.3.6"
redis = "^5.0.1"
sympy = "^1.12"
pydantic = "^2.6.0"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
manim = "^0.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
